# pyproject_toml_api

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyproject_toml_api.html  pyproject_toml_api.version_api.html  read_me_link.html  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree  pyproject_toml_api.doctree  pyproject_toml_api.version_api.doctree  read_me_link.doctree
.github/workflows/: documentation.yaml  precommit.yml  test.yml
_modules/: index.html
_modules/pyproject_toml_api/: main.html
_modules/pyproject_toml_api/version_api/: version.html
_sources/: index.rst.txt  modules.rst.txt  pyproject_toml_api.version_api.rst.txt
docs/: conf.py  index.rst  modules.rst  pyproject_toml_api.rst  version_api.rst
pyproject_toml_api/: __init__.py  __main__.py  main.py
pyproject_toml_api/version_api/: __init__.py  version.py  version_dict.py  version_util.py
testing/: pyproject.toml
tests/: conftest.py
tests/version_api/: conftest.py  version_test.py
