[tool.poetry]
name = "test_project_toml"
version = "0.1.3"
description = "Test description"
authors = ["Test Author <testemail@test.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_project_toml"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
